# farewell-agent

./: .api-key.example.txt  .gitignore  LICENSE  README.md  install.sh  main.py  opencode.template.jsonc  pyproject.toml  storage.py
.farewell/: evostate.json  roles.json
.farewell/context/: farewell-agent.md
.opencode/prompts/: junior-reviewer.txt  senior-engineer.txt  team-orchestrator.txt
docs/: architecture.md  commands.md  getting-started.md  memory-system.md  project-setup.md
examples/: basic-usage.md  deps_check.py  echo.py  evo_output.py  greet.py  hitung_kata.py  kalkulator.py  pencatat.py  process_data.py  report_cli.py  sapa.py
examples/core/: __init__.py  analytics.py  footer.py  formatter.py  logger.py  processor.py  validation.py
farewell_agent/: __init__.py  analyzer.py  awesome_indexer.py  cli.py  config.py  context.py  cost.py  daily.py  dispatch.py  evodb.py  evolution.py  evolve.py  guide.py  helpers.py  indexer.py  intent.py  interpreter.py  learn.py  obsidian.py  org.py  repl.py  roles.py  router_client.py  setup.py  setup_project.py  sync.py  team.py  worker.py  workflow.py  workmode.py
farewell_agent/state/: io.py  memory.py  registry.py  session.py
instructions/: rules.md
scripts/: extract_knowledge.py
